# backedarray

./: .pre-commit-config.yaml  LICENSE  README.rst  examples.ipynb  pyproject.toml  requirements.txt
.github/workflows/: test.yml
backedarray/: __init__.py  dense_array.py  h5f5_dense_array.py  index.py  sparse_array.py  types.py  utils.py  zarr_dense_array.py
backedarray/tests/: helpers.py  test_backed.py
